--- a/homepage-2.html
+++ b/homepage-2.html
@@ -1836,121 +1836,6 @@
                             </div>
                         </div>
                     </div> -->
-                    <!-- <div class="gdlr-core-pbf-wrapper " style="padding: 0px 0px 0px 0px;">
-                        <div class="gdlr-core-pbf-background-wrap"></div>
-                        <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
-                            <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
-                                <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first">
-                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js "
-                                        style="padding: 75px 0px 0px 0px;">
-                                        <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
-                                            <div class="gdlr-core-pbf-element">
-                                                <div
-                                                    class="gdlr-core-image-item gdlr-core-item-pdlr gdlr-core-item-pdb  gdlr-core-center-align">
-                                                    <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-round"
-                                                        style="border-width: 0px;"><img
-                                                            src="upload/hp-donation-400x212.jpg" width="700"
-                                                            height="372" alt="" /></div>
-                                                </div>
-                                            </div>
-                                            <div class="gdlr-core-pbf-element">
-                                                <div
-                                                    class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr">
-                                                    <div class="gdlr-core-title-item-title-wrap clearfix">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
-                                                            style="font-size: 22px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;color: #182847 ;">
-                                                            Donation helps us</h3>
-                                                    </div><span
-                                                        class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption"
-                                                        style="font-size: 15px ;font-style: normal ;margin-top: 14px ;">The
-                                                        Campaign for the Raffles University is the <strong>largest
-                                                            fundraising campaign in history.</strong> With a historic $1
-                                                        billion goal, the campaign is expanding U of T’s global
-                                                        leadership capacity.</span>
-                                                </div>
-                                            </div>
-                                            <div class="gdlr-core-pbf-element">
-                                                <div
-                                                    class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
-                                                    <a class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border"
-                                                        href="#"
-                                                        style="font-size: 13px ;letter-spacing: 0px ;padding: 17px 31px 18px 31px;text-transform: none ;border-radius: 2px;-moz-border-radius: 2px;-webkit-border-radius: 2px;"><i
-                                                            class="gdlr-core-pos-left fa fa-heart"></i><span
-                                                            class="gdlr-core-content">Become a donor</span></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="gdlr-core-pbf-column gdlr-core-column-30" data-skin="Newsletter HP 2">
-                                    <div class="gdlr-core-pbf-column-content-margin gdlr-core-js "
-                                        style="margin: 0px 20px 0px 0px;padding: 110px 25px 20px 25px;">
-                                        <div class="gdlr-core-pbf-background-wrap">
-                                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                                style="background-size: cover ;background-position: center ;"
-                                                data-parallax-speed="0"></div>
-                                        </div>
-                                        <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
-                                            <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-image-item gdlr-core-item-pdlr gdlr-core-item-pdb  gdlr-core-center-align"
-                                                    style="padding-bottom: 55px ;">
-                                                    <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-rectangle"
-                                                        style="border-width: 0px;margin: 0px 0px 0px 0px;"><img
-                                                            src="upload/icon-envelope.png" alt="" width="78" height="60"
-                                                            title="icon-envelope" /></div>
-                                                </div>
-                                            </div>
-                                            <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-center-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr"
-                                                    style="padding-bottom: 23px ;">
-                                                    <div class="gdlr-core-title-item-title-wrap clearfix">
-                                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
-                                                            style="font-size: 20px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;color: #181818 ;">
-                                                            Subscribe To Newsletter</h3>
-                                                    </div><span
-                                                        class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption"
-                                                        style="font-style: normal ;color: #181818 ;margin-top: 4px ;">Get
-                                                        updates to news & events</span>
-                                                </div>
-                                            </div>
-                                            <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-center-align"
-                                                    style="padding-bottom: 20px ;">
-                                                    <div class="gdlr-core-text-box-item-content"
-                                                        style="font-size: 15px ;text-transform: none ;color: #6c6c6c ;">
-                                                        <p>The Campaign for the Raffles University is the largest
-                                                            fundraising campaign in history. With a historic</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="gdlr-core-pbf-element">
-                                                <div
-                                                    class="gdlr-core-newsletter-item gdlr-core-item-pdlr gdlr-core-item-pdb  gdlr-core-style-rectangle-full">
-
-                                                    <div class="newsletter newsletter-subscription">
-                                                        <form class="gdlr-core-newsletter-form clearfix" method="post"
-                                                            action="https://demo.goodlayers.com/kingster/?na=s"
-                                                            onsubmit="return newsletter_check(this)">
-                                                            <div class="gdlr-core-newsletter-email">
-                                                                <input
-                                                                    class="newsletter-email gdlr-core-skin-e-background gdlr-core-skin-e-content"
-                                                                    placeholder="Your Email Address" type="email"
-                                                                    name="ne" size="30" required />
-                                                            </div>
-                                                            <div class="gdlr-core-newsletter-submit">
-                                                                <input class="newsletter-submit" type="submit"
-                                                                    value="Subscribe" />
-                                                            </div>
-                                                        </form>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
                     <div class="gdlr-core-pbf-wrapper " style="padding: 55px 0px 20px 0px;">
                         <div class="gdlr-core-pbf-background-wrap"
                             style="background-image: url(img/B34A0299.jpg) ;background-size: cover;background-position-y: -315px;">
@@ -2013,6 +1898,27 @@
                                     </section>
 
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="gdlr-core-pbf-wrapper " style="padding: 30px 0px 0px 0px;">
+                        <div class="gdlr-core-pbf-background-wrap"></div>
+                        <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
+                            <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
+                                <div>
+                                    <i class="fa fa-instagram insta-icon"></i>
+                                    <div class="vl">
+                                    </div>
+                                    <div class="position">
+                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title h3mob"
+                                            style="font-size: 40px ;font-weight: 300 ;letter-spacing: 3px ;text-transform: none ;color: #EB8223 ;margin-bottom: 0px;margin-left: 39%;">
+                                            Explore our Activities</h3>
+                                        <h3 class="gdlr-core-title-item-title gdlr-core-skin-title h3mob"
+                                            style="font-size: 40px ;font-weight: 600 ;letter-spacing: 1.5px ;text-transform: none ;color: #EB8223 ;margin-left: 39%;">
+                                            THROUGH INSTAGRAM</h3>
+                                    </div>
+                                </div>
+                                
                             </div>
                         </div>
                     </div>
