--- a/homepage-2.html
+++ b/homepage-2.html
@@ -13,6 +13,7 @@
     <link rel='stylesheet' href='css/style-core.css' type='text/css' media='all' />
     <link rel='stylesheet' href='css/kingster-style-custom.css' type='text/css' media='all' />
     <link rel='stylesheet' href='css/logos-slider.css' type='text/css' media='all' />
+    <link rel='stylesheet' href='css/posts-slider.css' type='text/css' media='all' />
 
 
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700%2C400" rel="stylesheet"
@@ -23,6 +24,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flickity/1.0.0/flickity.css">
 
 </head>
 
@@ -1918,7 +1921,13 @@
                                             THROUGH INSTAGRAM</h3>
                                     </div>
                                 </div>
-                                
+                                <div class="gallery js-flickity"  data-flickity-options='{ "wrapAround": true }'>
+                                    <div class="gallery-cell"></div>
+                                    <div class="gallery-cell"></div>
+                                    <div class="gallery-cell"></div>
+                                    <div class="gallery-cell"></div>
+                                    <div class="gallery-cell"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -1948,7 +1957,7 @@
                                         <br /> Turki Bin Abdulaziz st 11454
                                         <br /> Riyadh, Saaudi Arabia
                                     </p>
-                                    <p>
+                                    <!-- <p>
                                         <span style="font-size: 15px; color: #ffffff;">+966 11 281 5126</span><br>
                                         <span style="font-size: 15px; color: #ffffff;">+996 55 299 5509</span>
                                         <br /> <span class="gdlr-core-space-shortcode"
@@ -1958,7 +1967,7 @@
                                             href="mailto:admin@kingsteruni.edu">info@raffles-me.com</a><br>
                                         <a style="font-size: 15px; color: #ffffff;"
                                             href="mailto:admin@kingsteruni.edu">Career@raffles-me.com</a>
-                                    </p>
+                                    </p> -->
                                     <div
                                         class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-left-align">
                                         <div class="gdlr-core-divider-line gdlr-core-skin-divider"
@@ -1985,35 +1994,27 @@
                             </div>
                         </div>
                         <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
-                            <div id="gdlr-core-custom-menu-widget-3"
+                            <div id="gdlr-core-custom-menu-widget-4"
                                 class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                                <h3 class="kingster-widget-title">Campus Life</h3><span class="clear"></span>
-                                <div class="menu-campus-life-container">
-                                    <ul id="menu-campus-life"
+                                <h3 class="kingster-widget-title">Email</h3><span class="clear"></span>
+                                <div class="menu-academics-container">
+                                    <ul id="menu-academics"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain">
-                                        <li class="menu-item"><a href="#">Accessibility</a></li>
-                                        <li class="menu-item"><a href="#">Financial Aid</a></li>
-                                        <li class="menu-item"><a href="#">Food Services</a></li>
-                                        <li class="menu-item"><a href="#">Housing</a></li>
-                                        <li class="menu-item"><a href="#">Information Technologies</a></li>
-                                        <li class="menu-item"><a href="#">Student Life</a></li>
+                                        <li class="menu-item">Info@raffles-me.com</li>
+                                        <li class="menu-item">Career@raffles-me.com</li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
                         <div class="kingster-footer-column kingster-item-pdlr kingster-column-15">
-                            <div id="gdlr-core-custom-menu-widget-4"
+                            <div id="gdlr-core-custom-menu-widget-3"
                                 class="widget widget_gdlr-core-custom-menu-widget kingster-widget">
-                                <h3 class="kingster-widget-title">Academics</h3><span class="clear"></span>
-                                <div class="menu-academics-container">
-                                    <ul id="menu-academics"
+                                <h3 class="kingster-widget-title">Phone</h3><span class="clear"></span>
+                                <div class="menu-campus-life-container">
+                                    <ul id="menu-campus-life"
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain">
-                                        <li class="menu-item"><a href="#">Canvas</a></li>
-                                        <li class="menu-item"><a href="#">Catalyst</a></li>
-                                        <li class="menu-item"><a href="#">Library</a></li>
-                                        <li class="menu-item"><a href="#">Time Schedule</a></li>
-                                        <li class="menu-item"><a href="#">Apply For Admissions</a></li>
-                                        <li class="menu-item"><a href="#">Pay My Tuition</a></li>
+                                        <li class="menu-item">+966 11 281 5126</li>
+                                        <li class="menu-item">+996 55 299 5509</li>
                                     </ul>
                                 </div>
                             </div>
@@ -2057,7 +2058,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css'>
-    <link rel="stylesheet" href="./style.css">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flickity/1.0.0/flickity.pkgd.js"></script>
 
     <script type='text/javascript' src='js/logos-slider.js'></script>
     <script type='text/javascript' src='js/jquery/jquery.js'></script>
