--- a/programmes.html
+++ b/programmes.html
@@ -23,7 +23,7 @@
             <div class="kingster-mobile-header-container kingster-container clearfix">
                 <div class="kingster-logo  kingster-item-pdlr">
                     <div class="kingster-logo-inner">
-                        <a class="" href="index.html"><img src="images/logo.png" alt="" /></a>
+                        <a class="" href="home.html"><img src="images/logo.png" alt="" /></a>
                     </div>
                 </div>
                 <div class="kingster-mobile-menu-right">
@@ -44,10 +44,10 @@
                     <div class="kingster-mobile-menu"><a class="kingster-mm-menu-button kingster-mobile-menu-button kingster-mobile-button-hamburger" href="#kingster-mobile-menu"><span></span></a>
                         <div class="kingster-mm-menu-wrap kingster-navigation-font" id="kingster-mobile-menu" data-slide="right">
                             <ul id="menu-main-navigation" class="m-menu">
-                                <li class="menu-item menu-item-home current-menu-item menu-item-has-children"><a href="index.html">Home</a>
+                                <li class="menu-item menu-item-home current-menu-item menu-item-has-children"><a href="home.html">Home</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item menu-item-home"><a href="index.html">Homepage 1</a></li>
-                                        <li class="menu-item"><a href="homepage-2.html">Homepage 2</a></li>
+                                        <li class="menu-item menu-item-home"><a href="home.html">Homepage 1</a></li>
+                                        <li class="menu-item"><a href="index.html">Homepage 2</a></li>
                                     </ul>
                                 </li>
                                 <li class="menu-item menu-item-has-children"><a href="#">Pages</a>
@@ -205,16 +205,16 @@
                     <div class="kingster-header-container-inner clearfix">
                         <div class="kingster-logo  kingster-item-pdlr">
                             <div class="kingster-logo-inner">
-                                <a class="" href="index.html"><img src="images/logo.png" alt="" /></a>
+                                <a class="" href="home.html"><img src="images/logo.png" alt="" /></a>
                             </div>
                         </div>
                         <div class="kingster-navigation kingster-item-pdlr clearfix ">
                             <div class="kingster-main-menu" id="kingster-main-menu">
                                 <ul id="menu-main-navigation-1" class="sf-menu">
-                                    <li class="menu-item menu-item-home menu-item-has-children kingster-normal-menu"><a href="index.html" class="sf-with-ul-pre">Home</a>
+                                    <li class="menu-item menu-item-home menu-item-has-children kingster-normal-menu"><a href="home.html" class="sf-with-ul-pre">Home</a>
                                         <ul class="sub-menu">
-                                            <li class="menu-item menu-item-home" data-size="60"><a href="index.html">Homepage 1</a></li>
-                                            <li class="menu-item" data-size="60"><a href="homepage-2.html">Homepage 2</a></li>
+                                            <li class="menu-item menu-item-home" data-size="60"><a href="home.html">Homepage 1</a></li>
+                                            <li class="menu-item" data-size="60"><a href="index.html">Homepage 2</a></li>
                                         </ul>
                                     </li>
                                     <li class="menu-item  current-menu-item  menu-item-has-children kingster-normal-menu"><a href="#" class="sf-with-ul-pre">Pages</a>
@@ -376,8 +376,8 @@
                 <div class="kingster-page-title-overlay"></div>
                 <div class="kingster-page-title-container kingster-container">
                     <div class="kingster-page-title-content kingster-item-pdlr">
-                        <div class="kingster-page-caption">News & Updates</div>
-                        <h1 class="kingster-page-title">Blog Grid 2 Columns</h1></div>
+                        <!-- <div class="kingster-page-caption">News & Updates</div> -->
+                        <h1 class="kingster-page-title">Programmes</h1></div>
                 </div>
             </div>
             <div class="kingster-page-wrapper" id="kingster-page-wrapper">
@@ -387,7 +387,7 @@
                             <div class="gdlr-core-pbf-element">
                                 <div class="gdlr-core-blog-item gdlr-core-item-pdb clearfix  gdlr-core-style-blog-image" style="padding-bottom: 40px ;">
                                     <div class="gdlr-core-blog-item-holder gdlr-core-js-2 clearfix" data-layout="fitrows">
-                                        <div class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-30 gdlr-core-column-first">
+                                        <div class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-20 gdlr-core-column-first">
                                             <div class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                                 <div class="gdlr-core-blog-modern-inner">
                                                     <div class="gdlr-core-blog-thumbnail gdlr-core-media-image"><img src="upload/shutterstock_135948689-400x377.jpg" width="700" height="660"  alt="" /></div>
@@ -398,8 +398,9 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <h5 class="programmes-h5">Foundation Studies</h5>
                                         </div>
-                                        <div class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-30">
+                                        <div class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-20">
                                             <div class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                                 <div class="gdlr-core-blog-modern-inner">
                                                     <div class="gdlr-core-blog-thumbnail gdlr-core-media-image"><img src="upload/shutterstock_218235004-400x377.jpg" width="700" height="660"  alt="" /></div>
@@ -410,8 +411,9 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <h5 class="programmes-h5">Visual Communication</h5>
                                         </div>
-                                        <div class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-30 gdlr-core-column-first">
+                                        <div class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-20 ">
                                             <div class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                                 <div class="gdlr-core-blog-modern-inner">
                                                     <div class="gdlr-core-blog-thumbnail gdlr-core-media-image"><img src="upload/shutterstock_481869205-400x377.jpg" width="700" height="660"  alt="" /></div>
@@ -422,8 +424,9 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <h5 class="programmes-h5">Fashion Marketing & Management Design</h5>
                                         </div>
-                                        <div class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-30">
+                                        <div class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-20 gdlr-core-column-first">
                                             <div class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                                 <div class="gdlr-core-blog-modern-inner">
                                                     <div class="gdlr-core-blog-thumbnail gdlr-core-media-image"><img src="upload/shutterstock_361397258-400x377.jpg" width="700" height="660"  alt="" /></div>
@@ -434,8 +437,9 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <h5 class="programmes-h5">Interior Design</h5>
                                         </div>
-                                        <div class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-30 gdlr-core-column-first">
+                                        <div class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-20 ">
                                             <div class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                                 <div class="gdlr-core-blog-modern-inner">
                                                     <div class="gdlr-core-blog-thumbnail gdlr-core-media-image"><img src="upload/shutterstock_213333985-400x377.jpg" width="700" height="660"  alt="" /></div>
@@ -446,8 +450,9 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <h5 class="programmes-h5">Jewellery Design</h5>
                                         </div>
-                                        <div class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-30">
+                                        <div class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-20">
                                             <div class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                                 <div class="gdlr-core-blog-modern-inner">
                                                     <div class="gdlr-core-blog-thumbnail gdlr-core-media-image"><img src="upload/shutterstock_787201486-400x377.jpg" width="700" height="660"  alt="" /></div>
@@ -458,9 +463,9 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <h5 class="programmes-h5">Fashion Design</h5>
                                         </div>
                                     </div>
-                                    <div class="gdlr-core-load-more-wrap gdlr-core-js gdlr-core-center-align gdlr-core-item-pdlr" data-ajax="gdlr_core_post_ajax" data-target="gdlr-core-blog-item-holder" data-target-action="append"><a href="#" class="gdlr-core-load-more gdlr-core-button-color" data-ajax-name="paged" data-ajax-value="2">Load More</a></div>
                                 </div>
                             </div>
                         </div>
@@ -585,7 +590,7 @@
     <script type='text/javascript' src='js/jquery/ui/effect.min.js'></script>
     <script type='text/javascript'>
         var kingster_script_core = {
-            "home_url": "index.html"
+            "home_url": "home.html"
         };
     </script>
     <script type='text/javascript' src='js/plugins.min.js'></script>
