--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
             <div class="kingster-mobile-header-container kingster-container clearfix">
                 <div class="kingster-logo  kingster-item-pdlr">
                     <div class="kingster-logo-inner">
-                        <a class="" href="index.html"><img src="images/logo.png" alt="" /></a>
+                        <a class="" href="home.html"><img src="images/logo.png" alt="" /></a>
                     </div>
                 </div>
                 <div class="kingster-mobile-menu-right">
@@ -44,10 +44,10 @@
                     <div class="kingster-mobile-menu"><a class="kingster-mm-menu-button kingster-mobile-menu-button kingster-mobile-button-hamburger" href="#kingster-mobile-menu"><span></span></a>
                         <div class="kingster-mm-menu-wrap kingster-navigation-font" id="kingster-mobile-menu" data-slide="right">
                             <ul id="menu-main-navigation" class="m-menu">
-                                <li class="menu-item menu-item-home current-menu-item menu-item-has-children"><a href="index.html">Home</a>
+                                <li class="menu-item menu-item-home current-menu-item menu-item-has-children"><a href="home.html">Home</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item menu-item-home"><a href="index.html">Homepage 1</a></li>
-                                        <li class="menu-item"><a href="homepage-2.html">Homepage 2</a></li>
+                                        <li class="menu-item menu-item-home"><a href="home.html">Homepage 1</a></li>
+                                        <li class="menu-item"><a href="index.html">Homepage 2</a></li>
                                     </ul>
                                 </li>
                                 <li class="menu-item menu-item-has-children"><a href="#">Pages</a>
@@ -205,16 +205,16 @@
                     <div class="kingster-header-container-inner clearfix">
                         <div class="kingster-logo  kingster-item-pdlr">
                             <div class="kingster-logo-inner">
-                                <a class="" href="index.html"><img src="images/logo.png" alt="" /></a>
+                                <a class="" href="home.html"><img src="images/logo.png" alt="" /></a>
                             </div>
                         </div>
                         <div class="kingster-navigation kingster-item-pdlr clearfix ">
                             <div class="kingster-main-menu" id="kingster-main-menu">
                                 <ul id="menu-main-navigation-1" class="sf-menu">
-                                    <li class="menu-item menu-item-home menu-item-has-children kingster-normal-menu"><a href="index.html" class="sf-with-ul-pre">Home</a>
+                                    <li class="menu-item menu-item-home menu-item-has-children kingster-normal-menu"><a href="home.html" class="sf-with-ul-pre">Home</a>
                                         <ul class="sub-menu">
-                                            <li class="menu-item menu-item-home" data-size="60"><a href="index.html">Homepage 1</a></li>
-                                            <li class="menu-item" data-size="60"><a href="homepage-2.html">Homepage 2</a></li>
+                                            <li class="menu-item menu-item-home" data-size="60"><a href="home.html">Homepage 1</a></li>
+                                            <li class="menu-item" data-size="60"><a href="index.html">Homepage 2</a></li>
                                         </ul>
                                     </li>
                                     <li class="menu-item  current-menu-item  menu-item-has-children kingster-normal-menu"><a href="#" class="sf-with-ul-pre">Pages</a>
@@ -381,12 +381,12 @@
                             <h1 class="kingster-not-found-head">404</h1>
                             <h3 class="kingster-not-found-title kingster-content-font">Page Not Found</h3>
                             <div class="kingster-not-found-caption">Sorry, we couldn&#039;t find the page you&#039;re looking for.</div>
-                            <form role="search" method="get" class="search-form" action="index.html">
+                            <form role="search" method="get" class="search-form" action="home.html">
                                 <input type="text" class="search-field kingster-title-font" placeholder="Type Keywords..." value="" name="s">
                                 <div class="kingster-top-search-submit"><i class="fa fa-search"></i></div>
                                 <input type="submit" class="search-submit" value="Search">
                             </form>
-                            <div class="kingster-not-found-back-to-home"><a href="index.html">Or Back To Homepage</a></div>
+                            <div class="kingster-not-found-back-to-home"><a href="home.html">Or Back To Homepage</a></div>
                         </div>
                     </div>
                 </div>
@@ -510,7 +510,7 @@
     <script type='text/javascript' src='js/jquery/ui/effect.min.js'></script>
     <script type='text/javascript'>
         var kingster_script_core = {
-            "home_url": "index.html"
+            "home_url": "home.html"
         };
     </script>
     <script type='text/javascript' src='js/plugins.min.js'></script>
