--- a/homepage-ar.html
+++ b/homepage-ar.html
@@ -58,8 +58,8 @@
                                 <li class="menu-item menu-item-home current-menu-item menu-item-has-children li-ar">
                                     <a href="homepage-ar.html" class="li-txt-ar">Home</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item menu-item-home"><a href="index.html">Homepage 1</a></li>
-                                        <li class="menu-item"><a href="homepage-2.html">Homepage 2</a></li>
+                                        <li class="menu-item menu-item-home"><a href="home.html">Homepage 1</a></li>
+                                        <li class="menu-item"><a href="index.html">Homepage 2</a></li>
                                     </ul>
                                 </li>
                                 <li class="menu-item menu-item-has-children li-ar"><a href="#" class="li-txt-ar">Pages</a>
@@ -288,7 +288,7 @@
                             <ul id="kingster-top-bar-menu"
                                 class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu sf-js-enabled sf-arrows"
                                 style="touch-action: pan-y; float: right;">
-                                <li class="menu-item kingster-normal-menu"><a href="homepage-2.html"><img
+                                <li class="menu-item kingster-normal-menu"><a href="index.html"><img
                                             src="img/uk-flag.png" width="35" alt=""></a></li>
                             </ul>
                         </div>
@@ -317,8 +317,8 @@
                                         <a href="homepage-ar.html" class="sf-with-ul-pre sf-with-ul">Home</a>
                                         <ul class="sub-menu" style="display: none;">
                                             <li class="menu-item menu-item-home" data-size="60"><a
-                                                    href="index.html">Homepage 1</a></li>
-                                            <li class="menu-item" data-size="60"><a href="homepage-2.html">Homepage
+                                                    href="home.html">Homepage 1</a></li>
+                                            <li class="menu-item" data-size="60"><a href="index.html">Homepage
                                                     2</a></li>
                                         </ul>
                                     </li>
