--- a/medicine.html
+++ b/medicine.html
@@ -23,7 +23,7 @@
             <div class="kingster-mobile-header-container kingster-container clearfix">
                 <div class="kingster-logo  kingster-item-pdlr">
                     <div class="kingster-logo-inner">
-                        <a class="" href="index.html"><img src="images/logo.png" alt="" /></a>
+                        <a class="" href="home.html"><img src="images/logo.png" alt="" /></a>
                     </div>
                 </div>
                 <div class="kingster-mobile-menu-right">
@@ -44,10 +44,10 @@
                     <div class="kingster-mobile-menu"><a class="kingster-mm-menu-button kingster-mobile-menu-button kingster-mobile-button-hamburger" href="#kingster-mobile-menu"><span></span></a>
                         <div class="kingster-mm-menu-wrap kingster-navigation-font" id="kingster-mobile-menu" data-slide="right">
                             <ul id="menu-main-navigation" class="m-menu">
-                                <li class="menu-item menu-item-home current-menu-item menu-item-has-children"><a href="index.html">Home</a>
+                                <li class="menu-item menu-item-home current-menu-item menu-item-has-children"><a href="home.html">Home</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item menu-item-home"><a href="index.html">Homepage 1</a></li>
-                                        <li class="menu-item"><a href="homepage-2.html">Homepage 2</a></li>
+                                        <li class="menu-item menu-item-home"><a href="home.html">Homepage 1</a></li>
+                                        <li class="menu-item"><a href="index.html">Homepage 2</a></li>
                                     </ul>
                                 </li>
                                 <li class="menu-item menu-item-has-children"><a href="#">Pages</a>
@@ -205,16 +205,16 @@
                     <div class="kingster-header-container-inner clearfix">
                         <div class="kingster-logo  kingster-item-pdlr">
                             <div class="kingster-logo-inner">
-                                <a class="" href="index.html"><img src="images/logo.png" alt="" /></a>
+                                <a class="" href="home.html"><img src="images/logo.png" alt="" /></a>
                             </div>
                         </div>
                         <div class="kingster-navigation kingster-item-pdlr clearfix ">
                             <div class="kingster-main-menu" id="kingster-main-menu">
                                 <ul id="menu-main-navigation-1" class="sf-menu">
-                                    <li class="menu-item menu-item-home menu-item-has-children kingster-normal-menu"><a href="index.html" class="sf-with-ul-pre">Home</a>
+                                    <li class="menu-item menu-item-home menu-item-has-children kingster-normal-menu"><a href="home.html" class="sf-with-ul-pre">Home</a>
                                         <ul class="sub-menu">
-                                            <li class="menu-item menu-item-home" data-size="60"><a href="index.html">Homepage 1</a></li>
-                                            <li class="menu-item" data-size="60"><a href="homepage-2.html">Homepage 2</a></li>
+                                            <li class="menu-item menu-item-home" data-size="60"><a href="home.html">Homepage 1</a></li>
+                                            <li class="menu-item" data-size="60"><a href="index.html">Homepage 2</a></li>
                                         </ul>
                                     </li>
                                     <li class="menu-item menu-item-has-children kingster-normal-menu"><a href="#" class="sf-with-ul-pre">Pages</a>
@@ -384,7 +384,7 @@
             </div>
             <div class="kingster-breadcrumbs">
                 <div class="kingster-breadcrumbs-container kingster-container">
-                    <div class="kingster-breadcrumbs-item kingster-item-pdlr"> <span property="itemListElement" typeof="ListItem"><a property="item" typeof="WebPage" title="Go to Kingster." href="index.html" class="home"><span property="name">Home</span></a>
+                    <div class="kingster-breadcrumbs-item kingster-item-pdlr"> <span property="itemListElement" typeof="ListItem"><a property="item" typeof="WebPage" title="Go to Kingster." href="home.html" class="home"><span property="name">Home</span></a>
                         <meta property="position" content="1">
                         </span>&gt;<span property="itemListElement" typeof="ListItem"><span property="name">Medicine</span>
                         <meta property="position" content="2">
@@ -429,7 +429,7 @@
                                                             <div class="gdlr-core-feature-box-background" style="background-image: url(upload/shutterstock_327174593.jpg) ;opacity: 0.14 ;"></div>
                                                             <div class="gdlr-core-feature-box-content gdlr-core-sync-height-content">
                                                                 <h3 class="gdlr-core-feature-box-item-title" style="font-size: 16px ;font-weight: 600 ;">Business Regulation</h3></div>
-                                                            <a class="gdlr-core-feature-box-link" href="business-regulation/index.html" target="_self"></a>
+                                                            <a class="gdlr-core-feature-box-link" href="business-regulation/home.html" target="_self"></a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -445,7 +445,7 @@
                                                             <div class="gdlr-core-feature-box-background" style="background-image: url(upload/shutterstock_339364214.jpg) ;opacity: 0.14 ;"></div>
                                                             <div class="gdlr-core-feature-box-content gdlr-core-sync-height-content">
                                                                 <h3 class="gdlr-core-feature-box-item-title" style="font-size: 16px ;font-weight: 600 ;">International Tax</h3></div>
-                                                            <a class="gdlr-core-feature-box-link" href="international-taxation/index.html" target="_self"></a>
+                                                            <a class="gdlr-core-feature-box-link" href="international-taxation/home.html" target="_self"></a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -777,7 +777,7 @@
     <script type='text/javascript' src='js/jquery/ui/effect.min.js'></script>
     <script type='text/javascript'>
         var kingster_script_core = {
-            "home_url": "index.html"
+            "home_url": "home.html"
         };
     </script>
     <script type='text/javascript' src='js/plugins.min.js'></script>
