--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
                         <div class="kingster-mm-menu-wrap kingster-navigation-font" id="kingster-mobile-menu"
                             data-slide="right">
                             <ul id="menu-main-navigation" class="m-menu">
-                                <li class="menu-item menu-item-home current-menu-item"><a
-                                        href="index.html">Home</a>
+                                <li class="menu-item menu-item-home current-menu-item"><a href="index.html">Home</a>
                                     <!-- <ul class="sub-menu">
                                         <li class="menu-item menu-item-home"><a href="home.html">Homepage 1</a></li>
                                         <li class="menu-item"><a href="index.html">Homepage 2</a></li>
@@ -203,8 +202,7 @@
                                         <li class="menu-item"><a href="404.html">404 Page</a></li>
                                     </ul>
                                 </li>
-                                <li class="menu-item menu-item-has-children"><a
-                                        href="programmes.html">Programmes</a>
+                                <li class="menu-item menu-item-has-children"><a href="programmes.html">Programmes</a>
                                     <ul class="sub-menu">
                                         <li class="menu-item menu-item-has-children"><a>Undergraduate</a>
                                             <ul class="sub-menu">
@@ -481,8 +479,7 @@
                                         </ul>
                                     </li>
                                     <li class="menu-item menu-item-has-children kingster-mega-menu"><a
-                                            href="programmes.html"
-                                            class="sf-with-ul-pre">Programmes</a>
+                                            href="programmes.html" class="sf-with-ul-pre">Programmes</a>
                                         <div class="sf-mega sf-mega-full megaimg">
                                             <ul class="sub-menu">
                                                 <li class="menu-item menu-item-has-children" data-size="15"><a
@@ -1921,7 +1918,7 @@
                                             THROUGH INSTAGRAM</h3>
                                     </div>
                                 </div>
-                                <div class="gallery js-flickity"  data-flickity-options='{ "wrapAround": true }'>
+                                <div class="gallery js-flickity" data-flickity-options='{ "wrapAround": true }'>
                                     <div class="gallery-cell"></div>
                                     <div class="gallery-cell"></div>
                                     <div class="gallery-cell"></div>
