--- a/index.html
+++ b/index.html
@@ -281,10 +281,10 @@
                 <div class="kingster-top-bar-container kingster-container ">
                     <div class="kingster-top-bar-container-inner clearfix">
                         <div class="kingster-top-bar-left kingster-item-pdlr"><i class="fa fa-envelope-open-o"
-                                style="font-size: 15px ;color: white ;margin-right: 8px ;"></i> contact@KUTheme.edu <i
+                                style="font-size: 15px ;color: white ;margin-right: 8px ;"></i> Info@raffles-me.com <i
                                 class="fa fa-phone"
                                 style="font-size: 15px ;color: white ;margin-left: 18px ;margin-right: 6px ;"></i>
-                            +1-3435-2356-222</div>
+                                +966 11 281 5126</div>
                         <div class="kingster-top-bar-right kingster-item-pdlr">
                             <ul id="kingster-top-bar-menu"
                                 class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
@@ -319,18 +319,18 @@
                             <div class="kingster-main-menu" id="kingster-main-menu">
                                 <ul id="menu-main-navigation-1" class="sf-menu">
                                     <li
-                                        class="menu-item menu-item-home current-menu-item menu-item-has-children kingster-normal-menu">
+                                        class="menu-item menu-item-home current-menu-item kingster-normal-menu">
                                         <a href="index.html" class="sf-with-ul-pre">Home</a>
-                                        <ul class="sub-menu">
+                                        <!-- <ul class="sub-menu">
                                             <li class="menu-item menu-item-home" data-size="60"><a
                                                     href="home.html">Homepage 1</a></li>
                                             <li class="menu-item" data-size="60"><a href="index.html">Homepage
                                                     2</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
-                                    <li class="menu-item menu-item-has-children kingster-normal-menu"><a href="#"
+                                    <li class="menu-item kingster-normal-menu"><a href="about-us.html"
                                             class="sf-with-ul-pre">About Us</a>
-                                        <ul class="sub-menu">
+                                        <!-- <ul class="sub-menu">
                                             <li class="menu-item" data-size="60"><a href="about-us.html">About KU</a>
                                             </li>
                                             <li class="menu-item menu-item-has-children" data-size="60"><a
@@ -476,11 +476,14 @@
                                             <li class="menu-item" data-size="60"><a href="coming-soon.html">Coming
                                                     Soon</a></li>
                                             <li class="menu-item" data-size="60"><a href="404.html">404 Page</a></li>
-                                        </ul>
+                                        </ul> -->
+                                    </li>
+                                    <li class="menu-item kingster-normal-menu"><a href="#"
+                                        class="sf-with-ul-pre">Services</a>
                                     </li>
                                     <li class="menu-item menu-item-has-children kingster-mega-menu"><a
                                             href="programmes.html" class="sf-with-ul-pre">Programmes</a>
-                                        <div class="sf-mega sf-mega-full megaimg">
+                                        <!-- <div class="sf-mega sf-mega-full megaimg">
                                             <ul class="sub-menu">
                                                 <li class="menu-item menu-item-has-children" data-size="15"><a
                                                         class="sf-with-ul-pre">Undergraduate</a>
@@ -534,7 +537,7 @@
                                                             in-major specializations</span></div>
                                                 </li>
                                             </ul>
-                                        </div>
+                                        </div> -->
                                     </li>
                                     <!-- <li class="menu-item menu-item-has-children kingster-normal-menu"><a
                                             href="apply-to-kingster.html" class="sf-with-ul-pre">Gallery</a>
@@ -554,7 +557,7 @@
                                                     Calendar</a></li>
                                         </ul>
                                     </li> -->
-                                    <li class="menu-item menu-item-has-children kingster-normal-menu"><a href="#"
+                                    <!-- <li class="menu-item menu-item-has-children kingster-normal-menu"><a href="#"
                                             class="sf-with-ul-pre">Courses</a>
                                         <ul class="sub-menu">
                                             <li class="menu-item" data-size="60"><a href="course-list-1.html">Course
@@ -562,10 +565,10 @@
                                             <li class="menu-item" data-size="60"><a href="course-list-2.html">Course
                                                     List 2</a></li>
                                         </ul>
+                                    </li> -->
+                                    <li class="menu-item kingster-normal-menu"><a href="#">Scholarships</a>
                                     </li>
-                                    <li class="menu-item kingster-normal-menu"><a href="athletics.html">Scholarships</a>
-                                    </li>
-                                    <li class="menu-item kingster-normal-menu"><a href="university-life.html">Admission
+                                    <li class="menu-item kingster-normal-menu"><a href="#">Admission
                                         </a></li>
                                     <li class="menu-item kingster-normal-menu"><a href="contact.html">Contact Us
                                         </a></li>
